# cloud-variables

backend/: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
backend/migrations/: 20250101000001_create_users.sql  20250101000002_create_tiers.sql  20250101000003_create_api_keys.sql  20250101000004_create_variables.sql  20250101000005_create_usage_stats.sql  20250101000006_create_promotion_history.sql  20250101000007_seed_default_tiers.sql
backend/scripts/: create_admin.sh  run_migrations.sh  setup_dev.sh
backend/src/: error.rs  lib.rs  main.rs
backend/src/api/: auth.rs  health.rs  mod.rs  users.rs  variables.rs
backend/src/api/admin/: mod.rs  promotions.rs  tiers.rs  users.rs
backend/src/db/: pool.rs
backend/src/dto/: admin.rs  auth.rs  mod.rs  tier.rs  user.rs  variable.rs
backend/src/middleware/: admin_auth.rs  auth.rs  mod.rs  request_logger.rs
backend/src/models/: api_key.rs  mod.rs  promotion.rs  role.rs  tier.rs  usage_stats.rs  user.rs  variable.rs
backend/src/repositories/: api_key_repo.rs  mod.rs  promotion_repo.rs  tier_repo.rs  usage_repo.rs  user_repo.rs  variable_repo.rs
backend/src/storage/: file_storage.rs  mod.rs  variable_store.rs
backend/src/utils/: hash.rs  json_validator.rs  jwt.rs  mod.rs  validation.rs
backend/tests/: dto_tests.rs  error_tests.rs  model_tests.rs  storage_tests.rs  utils_tests.rs
backend/tests/common/: mod.rs
